// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation reducer should TOGGLE_NAVIGATION 1`] = `
Object {
  "isNavigationShown": true,
}
`;

exports[`navigation reducer should return the initial state 1`] = `
Object {
  "isNavigationShown": false,
}
`;
